[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/grass.png" type="Texture" id=2]
[ext_resource path="res://scripts/World.gd" type="Script" id=4]
[ext_resource path="res://scripts/score_display.gd" type="Script" id=5]
[ext_resource path="res://scripts/timer_display.gd" type="Script" id=6]
[ext_resource path="res://fonts/label_theme.tres" type="Theme" id=7]
[ext_resource path="res://fonts/label_font.tres" type="DynamicFont" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 25, 0.5, 25 )

[node name="World" type="Spatial"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
shape = SubResource( 1 )

[node name="Position3D2" type="Position3D" parent="."]
transform = Transform( 1.99971, 0, -0.0341368, 0, 2, 0, 0.0341368, 0, 1.99971, 10.2968, 3.2, 10.7557 )

[node name="Position3D1" type="Position3D" parent="."]
transform = Transform( 1.99971, 0, -0.0341368, 0, 2, 0, 0.0341368, 0, 1.99971, -1.46571, 3.2, 10.8518 )

[node name="Position3D3" type="Position3D" parent="."]
transform = Transform( 1.99971, 0, -0.0341368, 0, 2, 0, 0.0341368, 0, 1.99971, 4.28342, 3.2, 16.3909 )

[node name="Position3D4" type="Position3D" parent="."]
transform = Transform( 1.99971, 0, -0.0341368, 0, 2, 0, 0.0341368, 0, 1.99971, -5.10246, 3.2, 26.5995 )

[node name="Position3D5" type="Position3D" parent="."]
transform = Transform( 1.99971, 0, -0.0341368, 0, 2, 0, 0.0341368, 0, 1.99971, -12.0981, 3.2, 11.0451 )

[node name="grass-a" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -12.1339, 0.5, 10.3864 )
billboard = 2
texture = ExtResource( 2 )
hframes = 2

[node name="grass-b" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 9.35001, 0.5, 8.94434 )
billboard = 2
double_sided = false
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="grass-b2" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -5.91651, 0.5, 24.8924 )
billboard = 2
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="grass-c" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -1.77843, 0.5, 9.24777 )
flip_h = true
billboard = 2
texture = ExtResource( 2 )
hframes = 2

[node name="grass-d" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 4.26939, 0.521255, 15.0138 )
flip_h = true
billboard = 2
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="grass-a2" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 14.7947, 0.5, 18.1834 )
billboard = 2
texture = ExtResource( 2 )
hframes = 2

[node name="grass-b3" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -8.06715, 0.5, 3.4825 )
billboard = 2
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="grass-b4" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -11.7656, 0.5, 21.2641 )
billboard = 2
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="grass-c2" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 17.6553, 0.5, 7.64566 )
flip_h = true
billboard = 2
texture = ExtResource( 2 )
hframes = 2

[node name="grass-d2" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0.548351, 0.521255, 24.8865 )
flip_h = true
billboard = 2
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_display" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.5
margin_top = 40.0
margin_right = 170.5
margin_bottom = 223.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.894118, 0.556863, 0.164706, 1 )
text = "XXX"
align = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/timer_display"]
wait_time = 31.0
one_shot = true
autostart = true

[node name="score_display" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -365.0
margin_top = -183.0
margin_right = -24.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.894118, 0.556863, 0.164706, 1 )
text = "XXX"
align = 2
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Control/timer_display/Timer" to="." method="_on_Timer_timeout"]
